Выполнил домашнюю работу 2 - Создал метод для проверки счастливых билетов - Создал тесты для этого метода - Создал сьюты для негативных, позитивных и всех тестов - Настроил запуск тестов с помощью maven surefire - Настроил профили maven для запуска тестов

--- a/nikita-gusakov-level-up/pom.xml
+++ b/nikita-gusakov-level-up/pom.xml
@@ -12,6 +12,92 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <checkstyle.version>10.3.3</checkstyle.version>
+        <testng.version>7.8.0</testng.version>
+        <maven-checkstyle-plugin.version>3.2.0</maven-checkstyle-plugin.version>
+        <maven-surefire-plugin.version>3.1.0</maven-surefire-plugin.version>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>happy-ticket-negative-suite</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                  <suite.xml>${project.build.directory}/test-classes/ru/levelp/at/homework2/HappyTicketNegativeSuite.xml</suite.xml>
+            </properties>
+        </profile>
+        <profile>
+            <id>happy-ticket-positive-suite</id>
+            <properties>
+                <suite.xml>${project.build.directory}/test-classes/ru/levelp/at/homework2/HappyTicketPositiveSuite.xml</suite.xml>
+            </properties>
+        </profile>
+        <profile>
+            <id>happy-ticket-full-suite</id>
+            <properties>
+                <suite.xml>${project.build.directory}/test-classes/ru/levelp/at/homework2/HappyTicketFullSuite.xml</suite.xml>
+            </properties>
+        </profile>
+    </profiles>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${maven-checkstyle-plugin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>${checkstyle.version}</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <configLocation>
+                        <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
+                        https://raw.githubusercontent.com/khda91/leveup-code-checkers-configurations/main/checkstyle/checkstyle.xml
+                    </configLocation>
+                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                    <violationSeverity>warning</violationSeverity>
+                    <consoleOutput>true</consoleOutput>
+                    <failsOnError>true</failsOnError>
+                    <linkXRef>false</linkXRef>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>validate</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${suite.xml}</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
